--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng build --prod && firebase deploy",
+    "deploy:functions": "(cd functions; npm run build) && firebase deploy --only functions"
   },
   "private": true,
   "dependencies": {
